before code cleaning